# doc-gtk

./: .gitignore  Makefile.in  QandA  README  appendix.xml  check_chapterusage.php  cleanup.sh  configure.in  distribute_html.php  gen_chapterents.php  gen_docs_from_source.sh  gen_manual.sh  gen_manualxml.php  gen_name_to_id.xsl  global.ent  keysyms.xml  license.xml  live.php  liveGen.php  liveTest.php  manual.xml.in  mtoc.xml.in  notes  reference.xml  runfirst.sh  testclasses.xml.in  testmanual.xml.in  tutorials.xml  udocs.in  userguide.xml
cs/: bookinfo.xml  credits.xml  language-defs.ent  preface.xml  reference.xml  tutorials.xml  userguide.xml
cs/appendix/: credits.xml  doccredits.xml  translicense.xml
cs/tutorials/: hellow.xml
cs/userguide/chapters/: acknowledgements.xml  install.xml  installget.xml  installunix.xml  installusage.xml  installwin32.xml  intro.xml  introgtk.xml  introphp.xml  introphpgtk.xml  signals.xml  widgets.xml
dbxml/: dbpoolx.mod  docbookx.dtd  phpgtkdoc.dtd  xinclude.mod
de/: bookinfo.xml  credits.xml  language-defs.ent  license.xml  preface.xml  reference.xml  tutorials.xml  userguide.xml
de/appendix/: credits.xml  doccredits.xml
de/reference/gtk/: gtk-functions.xml  gtkaccellabel.xml  gtkadjustment.xml  gtkalignment.xml  gtkarrow.xml  gtkaspectframe.xml  gtkbin.xml  gtkbox.xml  gtkboxchild.xml  gtkbutton.xml  gtkbuttonbox.xml  gtkcalendar.xml  gtkcheckbutton.xml  gtkcheckmenuitem.xml  gtkclist.xml  gtkcolorselection.xml  gtkcombo.xml  gtkcontainer.xml  gtkctree.xml  gtkcurve.xml  gtkdata.xml  gtkdialog.xml  gtkwidget.xml  gtkwindow.xml
de/tutorials/: hellow.xml
de/userguide/chapters/: acknowledgements.xml  install.xml  installget.xml  installunix.xml  installusage.xml  installwin32.xml  intro.xml  introgtk.xml  introphp.xml  introphpgtk.xml  signals.xml  widgets.xml
en/: bookinfo.xml  credits.xml  language-defs.ent  license.xml  preface.xml  reference.xml  tutorials.xml  userguide.xml
en/appendix/: credits.xml  doccredits.xml
en/reference/extra/: extraenum.xml  gtksheet.xml
en/reference/gdk/: gdk-functions.xml  gdkbitmap.xml  gdkcolor.xml  gdkcolormap.xml  gdkcursor.xml  gdkdragcontext.xml  gdkenum.xml  gdkevent.xml  gdkeventany.xml  gdkeventbutton.xml  gdkeventclient.xml  gdkeventconfigure.xml  gdkeventcrossing.xml  gdkeventdnd.xml  gdkeventexpose.xml  gdkeventfocus.xml  gdkeventkey.xml  (+10 more)
en/tutorials/: filednd.xml  hellow.xml  pixmaps.xml  translation.xml
es/: bookinfo.xml  language-defs.ent  preface.xml
es/appendix/: credits.xml  doccredits.xml
es/tutorials/: hellow.xml
examples/: reference.gtk.gtkiconview.constructor.phpw
examples/test/: gtkaboutdialog.phpw  gtkaccellabel.phpw  gtkiconview.phpw  gtkmessagedialog.phpw
fr/: bookinfo.xml  credits.xml  language-defs.ent  preface.xml  reference.xml  tutorials.xml  userguide.xml
fr/appendix/: credits.xml  doccredits.xml  translicense.xml
fr/tutorials/: hellow.xml
it/: bookinfo.xml  credits.xml  language-defs.ent  license.xml  preface.xml  reference.xml  tutorials.xml  userguide.xml
it/appendix/: credits.xml  doccredits.xml  translicense.xml
ja/: Translators  bookinfo.xml  credits.xml  language-defs.ent  preface.xml  reference.xml  tutorials.xml  userguide.xml
ja/appendix/: credits.xml  doccredits.xml  translicense.xml
ja/tutorials/: hellow.xml
livedocs/: live.php  liveGen.php
manual/: appendix.xml  contributors.ent  demo_manual.xml  global.ent  manual.xml.in  reference.xml  tutorials.xml
manual/bg/: bookinfo.xml  language-defs.ent  preface.xml  translation.xml
manual/de/: bookinfo.xml  language-defs.ent  preface.xml
manual/en/: bookinfo.xml  language-defs.ent  preface.xml
manual/ja/: bookinfo.xml  language-defs.ent  preface.xml  translation.xml
manual/pt_BR/: bookinfo.xml  language-defs.ent  preface.xml  translation.xml
manual/zh_cn/: bookinfo.xml  language-defs.ent  preface.xml  translation.xml
pt_BR/: bookinfo.xml  credits.xml  language-defs.ent  preface.xml  tutorials.xml
pt_BR/appendix/: credits.xml  doccredits.xml
pt_BR/tutorials/: hellow.xml
ru/: bookinfo.xml  language-defs.ent  preface.xml
ru/appendix/: credits.xml  doccredits.xml  translicense.xml
scripts/: check-language-defs.ent.php  classcoverage.php  cleanup.sh  copy_images.php  coverage.php  demo_manual.xml  distribute_html.php  gen_chapterents.php  gen_docs_from_source.sh  gen_manual.sh  gen_manualxml.php  gen_name_to_id.xsl  genchapterents.php.in  gendoc.php  highlight.php  html_syntax.php  manual.xml.in  merge_updates.php  mtoc.xml.in  revcheck.php  search.php  testclasses.xml.in  testmanual.xml.in  udocs.in  updatedocs.php.in
scripts/geshi/: geshi.php
search/: manual-lookup.php
search/include/: layout.php  manual-lookup.inc  site.php
search/manual/: shared-manual.inc
stylesheets/: coverage.xsl
stylesheets/common/: ChangeLog  ar.xml  bg.xml  common.xsl  cs.xml  de.xml  en.xml  es.xml  fr.xml  he.xml  hu.xml  it.xml  ja.xml  l10n.dtd  l10n.xml  l10n.xsl  labels.xsl  pt_BR.xml  ro.xml  ru.xml  subtitles.xsl  titles.xsl  zh_cn.xml
stylesheets/html/: admon.xsl  autoidx.xsl  autotoc.xsl  block.xsl  chunk-common.xsl  chunk.xsl  chunk.xsl.in  chunker.xsl  class.xsl  component.xsl  division.xsl  docbook.xsl  enum.xsl  footnote.xsl  formal.xsl  glossary.xsl  graphics.xsl  hierarchy.xsl  html.xsl  index.xsl  inline.xsl  lists.xsl  math.xsl  name_to_id.xsl  param.xsl  phpweb.xsl  phpweb.xsl.in  pi.xsl  refentry.xsl  sections.xsl  synop.xsl  table.xsl  titlepage.templates.xsl  titlepage.xsl  toc.xsl  updates.xsl  updates.xsl.in  verbatim.xsl  xref.xsl
stylesheets/lib/: lib.xsl
stylesheets/xsl/: chunk-common.xsl  chunk.xsl.in  common.xsl.in  custom.titlepage.xsl  gen_name_to_id.xsl  hierarchy.xsl  html-common.xsl  html.xsl.in  label.xsl  locale.xsl.in  phpweb.xsl.in  quickref.xsl  toc.xsl  update.xsl.in
updater/: checkXml.sh  classdoc.tpl  createClassDoc.php  doUpdate.sh  firstOutput  prepxpath.php  prepxpath.py  remxpath.php  remxpath.py  updateMethods.php
updater/tests/: DocUpdateTestClass.php  DocUpdateTestClass.xml  DocUpdateTestClassTest.php
(+819 files in other folders)
